objects/LLC_BI__Fee__c.object
<CustomObject>
    <fields>
        <fullName>LLC_BI__TRID_Disclosure_Category__c</fullName>
        <description>Users manually populate this optional picklist to indicate the TRID disclosure category for a fee. By default, the picklist value is null.</description>
        <inlineHelpText>Select the TRID disclosure category for the fee.</inlineHelpText>
        <label>TRID Disclosure Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Origination Charges</fullName>
                </value>
                <value>
                    <fullName>Services You Cannot Shop For</fullName>
                </value>
                <value>
                    <fullName>Services You Can Shop For</fullName>
                </value>
                <value>
                    <fullName>Taxes and Other Government Fees</fullName>
                </value>
                <value>
                    <fullName>Prepaids</fullName>
                </value>
                <value>
                    <fullName>Initial Escrow Payment at Closing</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__TRID_Tolerances_Category__c</fullName>
        <description>Users manually populate this picklist to indicate the TRID tolerance category for a fee. By default, the picklist value is null.</description>
        <inlineHelpText>Select the TRID tolerance category for the fee.</inlineHelpText>
        <label>TRID Tolerances Category</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>0% Tolerance</fullName>
                </value>
                <value>
                    <fullName>10% Cumulative Tolerance</fullName>
                </value>
                <value>
                    <fullName>Unlimited Tolerance</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>LLC_BI__Template_Record__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>This field is specific to Standard Fees, and it links the Template Record that the fee was created from with the fee that is being applied to the loan.</description>
        <inlineHelpText>The Template Record that the fee was created from.</inlineHelpText>
        <label>Template Record</label>
        <referenceTo>LLC_BI__Template_Records__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Third_Party_Service_Detail__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The system populates this optional lookup field with the third party service to which the fee relates. By default, it is blank.</description>
        <inlineHelpText>This system-populated lookup field contains the third party service to which the fee relates.</inlineHelpText>
        <label>Third Party Service Detail</label>
        <referenceTo>LLC_BI__Service_Mgmt_Detail__c</referenceTo>
        <relationshipLabel>Fees</relationshipLabel>
        <relationshipName>Fees</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Trade_In_Allowance__c</fullName>
        <description>The system automatically populates this currency field to indicate the amount the seller pays for the trade-in collateral. By default, this field is blank.</description>
        <inlineHelpText>This field displays the amount the seller pays toward the applicant&apos;s trade-in collateral.</inlineHelpText>
        <label>Trade-In Allowance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Trade_In_Balance__c</fullName>
        <description>The system automatically populates this currency field to indicate the amount owed on the collateral the applicant wants to trade in for their purchase. By default, this field is blank.</description>
        <inlineHelpText>This field displays the amount owed on the applicant&apos;s trade-in collateral.</inlineHelpText>
        <label>Trade-In Balance</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>LLC_BI__Trade_In_Lien_Holder__c</fullName>
        <description>The system automatically populates this text field to indicate the name of the financial institution that has an existing lien on an applicant&apos;s trade-in vehicle. By default, this field is blank.</description>
        <inlineHelpText>This field displays the name of the financial institution that has an existing lien on the applicant&apos;s trade-in vehicle.</inlineHelpText>
        <label>Trade-In Lien Holder</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Migration_ID__c</fullName>
        <description>Custom Migration ID for Fee object used by nCino Data Services.</description>
        <externalId>true</externalId>
        <label>Migration ID</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payable_To__c</fullName>
        <label>Payable To</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_City__c</fullName>
        <label>Payee City</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_Country__c</fullName>
        <label>Payee Country</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Country</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payee_State__c</fullName>
        <label>Payee State</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>States</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Payee_Street__c</fullName>
        <label>Payee Street</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Payee_Zip_Code__c</fullName>
        <label>Payee Zip Code</label>
        <length>25</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Prepaid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Prepaid</label>
        <type>Checkbox</type>
    </fields>
    <label>Fee</label>
    <listViews>
        <fullName>LLC_BI__All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>FEE-{000000}</displayFormat>
        <label>Fee Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Fees</pluralLabel>
    <recordTypes>
        <fullName>LLC_BI__Adjustments</fullName>
        <active>true</active>
        <description>Record Type for Adjustments Page Layout</description>
        <label>Adjustments</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Costs</fullName>
        <active>true</active>
        <description>Record Type for Costs Page Layout</description>
        <label>Costs</label>
    </recordTypes>
    <recordTypes>
        <fullName>LLC_BI__Fees</fullName>
        <active>true</active>
        <description>Record Type for Fees Page Layout</description>
        <label>Fees</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>LLC_BI__Credit_Disclosure_Tolerances_Categories</fullName>
        <active>true</active>
        <description>User incorrectly populated TRID Disclosure Category and TRID Tolerances Category fields for the following fee types: General Credits, Cost to Cure, Down Payment, Earnest Money/Deposit.</description>
        <errorConditionFormula>AND(
        LLC_BI__Loan__r.LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__r.LLC_BI__Is_Subject_To_TRID_Tolerances__c, 
        OR(NOT(ISBLANK(TEXT(LLC_BI__TRID_Disclosure_Category__c))), NOT(ISBLANK(TEXT(LLC_BI__TRID_Tolerances_Category__c)))),
        OR(
            ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Lender Credit&apos;), ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Cost to Cure&apos;),
            ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Seller Credit&apos;), ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Earnest Money/Deposit&apos;),
            ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Down Payment&apos;), ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Other Credit&apos;), 
            ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Funds For Borrower&apos;)
        )
    )</errorConditionFormula>
        <errorMessage>TRID Disclosure and Tolerance categories are only required for Fees and Costs. To continue, remove any category values from non applicable fee types.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Duplicate_Cost_to_Cure</fullName>
        <active>true</active>
        <description>User cannot add multiple fees with a fee type of Cost to Cure to a loan.</description>
        <errorConditionFormula>OR(
			AND(
				ISPICKVAL(LLC_BI__Fee_Type__c, &apos;Cost to Cure&apos;),
				ISCHANGED(LLC_BI__Fee_Type__c),
				LLC_BI__Fee_Loan_Aggregate__r.LLC_BI__Cost_To_Cure__c != 0
			)
			,
			AND(
				ISPICKVAL(LLC_BI__Fee_Type__c, &apos;Cost to Cure&apos;),
				ISCHANGED(LLC_BI__Fee_Loan_Aggregate__c),
				LLC_BI__Fee_Loan_Aggregate__r.LLC_BI__Cost_To_Cure__c != 0
			)
		)</errorConditionFormula>
        <errorMessage>The cost to cure already exists for the loan. Click Edit to update the cost to cure.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Exclude_Seller_Paid_Fee_From_APR</fullName>
        <active>true</active>
        <description>Users cannot add seller-paid fees when Add to Finance Charge is selected.</description>
        <errorConditionFormula>ISPICKVAL(LLC_BI__Paid_By__c, &apos;Seller&apos;) &amp;&amp; LLC_BI__Add_To_Finance_Charge__c</errorConditionFormula>
        <errorMessage>A seller-paid fee cannot be added when Add to Finance Charge is selected. Deselect Add to Finance Charge.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Fee_Disclosure_Tolerances_Categories</fullName>
        <active>true</active>
        <description>User must populate TRID Disclosure Category and TRID Tolerances Category for TRID loans.</description>
        <errorConditionFormula>AND(LLC_BI__Loan__r.LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__r.LLC_BI__Is_Subject_To_TRID_Tolerances__c, 
			OR(
				ISBLANK(TEXT(LLC_BI__TRID_Disclosure_Category__c)), 
				AND(
					ISBLANK(TEXT(LLC_BI__TRID_Tolerances_Category__c)),
					NOT( 
						OR(ISPICKVAL(LLC_BI__TRID_Disclosure_Category__c, &apos;Due from Borrower at Closing&apos;)
						,ISPICKVAL(LLC_BI__TRID_Disclosure_Category__c, &apos;Paid Already by or on Behalf of Borrower at Closing&apos;))
					)
				)
			),
			NOT(
				OR(
					ISPICKVAL(LLC_BI__Fee_Type__c, &apos;Lender Credit&apos;), ISPICKVAL(LLC_BI__Fee_Type__c, &apos;Cost to Cure&apos;),
					ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Seller Credit&apos;), ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Earnest Money/Deposit&apos;),
					ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Down Payment&apos;), ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Other Credit&apos;), 
					ISPICKVAL(LLC_BI__Fee_Type__c , &apos;Funds For Borrower&apos;)
				)
			)
		)</errorConditionFormula>
        <errorMessage>For loans subject to TRID tolerances, you must select the appropriate TRID Disclosure Category and TRID Tolerances Category for each fee.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Lender_Paid_Fee_Types</fullName>
        <active>true</active>
        <description>Users can only add the General Lender Credit or Cost to Cure as Paid By Lender.</description>
        <errorConditionFormula>OR (
				AND(
					NOT(ISBLANK(TEXT(LLC_BI__Paid_By__c))),
					NOT(ISPICKVAL(LLC_BI__Paid_By__c, &apos;Lender&apos;)),
					ISPICKVAL(LLC_BI__Fee_Type__c, &apos;Lender Credit&apos;)
				),
				AND(
					NOT(ISBLANK(TEXT(LLC_BI__Paid_By__c))),
					NOT(ISPICKVAL(LLC_BI__Paid_By__c, &apos;Lender&apos;)),
					ISPICKVAL(LLC_BI__Fee_Type__c, &apos;Cost to Cure&apos;)
				)
			)</errorConditionFormula>
        <errorMessage>The General Lender Credit or Cost to Cure cannot be paid by the Borrower or Seller. Select Paid By Lender or leave this field blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Negative_Cost_to_Cure</fullName>
        <active>true</active>
        <description>User must enter a positive amount for the Cost to Cure.</description>
        <errorConditionFormula>OR (
				AND(
					LLC_BI__Amount__c &lt; 0,
					ISPICKVAL(LLC_BI__Fee_Type__c, &apos;Cost to Cure&apos;)
				),
				AND(
					ISNULL(LLC_BI__Amount__c),
					ISPICKVAL(LLC_BI__Fee_Type__c, &apos;Cost to Cure&apos;)
				)
			)</errorConditionFormula>
        <errorMessage>Error: Invalid Cost to Cure fee. Enter one fee with a positive amount.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Negative_Trid_Fee</fullName>
        <active>true</active>
        <description>The user entered a negative value for the fee. TRID tolerances require a positive value.</description>
        <errorConditionFormula>AND(
			LLC_BI__Loan__r.LLC_BI__Product_Reference__r.LLC_BI__Product_Feature__r.LLC_BI__Is_Subject_To_TRID_Tolerances__c, 
			LLC_BI__Amount__c &lt; 0
		)</errorConditionFormula>
        <errorMessage>Enter a positive value in the Fee Amount field. TRID tolerances require a positive value.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Other_Credit_Fee_Types</fullName>
        <active>false</active>
        <description>Users can only add an Other Credit as Paid By Other.</description>
        <errorConditionFormula>AND (
					NOT(ISBLANK(TEXT(LLC_BI__Paid_By__c))),
					NOT(ISPICKVAL(LLC_BI__Paid_By__c, &apos;Other&apos;)),
					ISPICKVAL(LLC_BI__Fee_Type__c, &apos;Other Credit&apos;)
			)</errorConditionFormula>
        <errorMessage>A Borrower, Lender, or Seller cannot pay an Other Credit. Select Paid By Other or leave this field blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Percentage_Fee_Required_Fields</fullName>
        <active>true</active>
        <description>When calculation type equals Percentage, Basis Source and Percentage fields are required.</description>
        <errorConditionFormula>ISPICKVAL(LLC_BI__Calculation_Type__c, &apos;Percentage&apos;) &amp;&amp; (ISPICKVAL(LLC_BI__Basis_Source__c, &apos;&apos;) || ISNULL(LLC_BI__Percentage__c))</errorConditionFormula>
        <errorMessage>Ensure values are entered for Basis Source and Percentage so the system can calculate the percentage calculation type.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Seller_Paid_Fee_Types</fullName>
        <active>true</active>
        <description>Users can only add the General Seller Credit as Paid By Seller.</description>
        <errorConditionFormula>AND (
					NOT(ISBLANK(TEXT(LLC_BI__Paid_By__c))),
					NOT(ISPICKVAL(LLC_BI__Paid_By__c, &apos;Seller&apos;)),
					ISPICKVAL(LLC_BI__Fee_Type__c, &apos;Seller Credit&apos;)
			)</errorConditionFormula>
        <errorMessage>The General Seller Credit cannot be paid by the Borrower or Lender. Select Paid By Seller or leave this field blank.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>LLC_BI__Service_Shopped_For</fullName>
        <active>true</active>
        <description>User incorrectly populated Service Shopped For picklist.</description>
        <errorConditionFormula>AND(NOT(ISBLANK(TEXT(LLC_BI__Service_Shopped_For__c))),  NOT(ISPICKVAL(LLC_BI__TRID_Disclosure_Category__c, &apos;Services You Can Shop For&apos;)))</errorConditionFormula>
        <errorMessage>The Service Shopped For picklist only applies to fees where the TRID Disclosure Category value is Services You Can Shop For.</errorMessage>
    </validationRules>
</CustomObject>